// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiHorizontalRectSeries all props are rendered 1`] = `
<div
  style="width:100%;height:100%"
>
  <div>
    <div
      class="rv-xy-plot "
      style="width:600px;height:200px"
    >
      <svg
        class="rv-xy-plot__inner"
        height="200"
        width="600"
      >
        <g>
          <g
            class="rv-xy-plot__series rv-xy-plot__series--rect "
            transform="translate(2,2)"
          >
            <rect
              height="0"
              style="opacity:1;stroke:white;fill:#ff0000;stroke-width:1;rx:2px;ry:2px"
              width="0"
              x="0"
              y="196"
            />
            <rect
              height="196"
              style="opacity:1;stroke:white;fill:#ff0000;stroke-width:1;rx:2px;ry:2px"
              width="596"
              x="0"
              y="196"
            />
          </g>
        </g>
        <g
          class="rv-xy-plot__grid-lines"
          transform="translate(2,2)"
        >
          <line
            class="rv-xy-plot__grid-lines__line"
            style="stroke-dasharray:5 5;stroke-opacity:0.3"
            x1="0"
            x2="596"
            y1="176.4"
            y2="176.4"
          />
          <line
            class="rv-xy-plot__grid-lines__line"
            style="stroke-dasharray:5 5;stroke-opacity:0.3"
            x1="0"
            x2="596"
            y1="137.2"
            y2="137.2"
          />
          <line
            class="rv-xy-plot__grid-lines__line"
            style="stroke-dasharray:5 5;stroke-opacity:0.3"
            x1="0"
            x2="596"
            y1="98"
            y2="98"
          />
          <line
            class="rv-xy-plot__grid-lines__line"
            style="stroke-dasharray:5 5;stroke-opacity:0.3"
            x1="0"
            x2="596"
            y1="58.80000000000001"
            y2="58.80000000000001"
          />
          <line
            class="rv-xy-plot__grid-lines__line"
            style="stroke-dasharray:5 5;stroke-opacity:0.3"
            x1="0"
            x2="596"
            y1="19.599999999999994"
            y2="19.599999999999994"
          />
        </g>
        <g
          class="rv-xy-plot__axis rv-xy-plot__axis--horizontal "
          transform="translate(2,198)"
        >
          <line
            class="rv-xy-plot__axis__line"
            x1="0"
            x2="596"
            y1="0"
            y2="0"
          />
          <g
            class="rv-xy-plot__axis__ticks"
            transform="translate(0, 0)"
          >
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(0, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.72em"
                text-anchor="middle"
                transform="translate(0, 8)"
              >
                0.0
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(59.6, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.72em"
                text-anchor="middle"
                transform="translate(0, 8)"
              >
                0.1
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(119.2, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.72em"
                text-anchor="middle"
                transform="translate(0, 8)"
              >
                0.2
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(178.79999999999998, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.72em"
                text-anchor="middle"
                transform="translate(0, 8)"
              >
                0.3
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(238.4, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.72em"
                text-anchor="middle"
                transform="translate(0, 8)"
              >
                0.4
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(298, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.72em"
                text-anchor="middle"
                transform="translate(0, 8)"
              >
                0.5
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(357.59999999999997, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.72em"
                text-anchor="middle"
                transform="translate(0, 8)"
              >
                0.6
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(417.2, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.72em"
                text-anchor="middle"
                transform="translate(0, 8)"
              >
                0.7
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(476.8, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.72em"
                text-anchor="middle"
                transform="translate(0, 8)"
              >
                0.8
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(536.4, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.72em"
                text-anchor="middle"
                transform="translate(0, 8)"
              >
                0.9
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(596, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.72em"
                text-anchor="middle"
                transform="translate(0, 8)"
              >
                1.0
              </text>
            </g>
          </g>
        </g>
        <g
          class="rv-xy-plot__axis rv-xy-plot__axis--vertical "
          transform="translate(0,2)"
        >
          <line
            class="rv-xy-plot__axis__line"
            x1="2"
            x2="2"
            y1="0"
            y2="196"
          />
          <g
            class="rv-xy-plot__axis__ticks"
            transform="translate(2, 0)"
          >
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(0, 176.4)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.32em"
                text-anchor="end"
                transform="translate(-8, 0)"
              >
                6
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(0, 137.2)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.32em"
                text-anchor="end"
                transform="translate(-8, 0)"
              >
                8
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(0, 98)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.32em"
                text-anchor="end"
                transform="translate(-8, 0)"
              >
                10
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(0, 58.80000000000001)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.32em"
                text-anchor="end"
                transform="translate(-8, 0)"
              >
                12
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(0, 19.599999999999994)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.32em"
                text-anchor="end"
                transform="translate(-8, 0)"
              >
                14
              </text>
            </g>
          </g>
        </g>
      </svg>
    </div>
  </div>
</div>
`;

exports[`EuiHorizontalRectSeries is rendered 1`] = `
<div
  style="width: 100%; height: 100%;"
>
  <div
    aria-label="aria-label"
    class="testClass1 testClass2"
    data-test-subj="test subject string"
  >
    <div
      class="rv-xy-plot "
      style="width: 600px; height: 200px;"
    >
      <svg
        class="rv-xy-plot__inner"
        height="200"
        width="600"
      >
        <g>
          <g
            class="rv-xy-plot__series rv-xy-plot__series--rect "
            transform="translate(2,2)"
          >
            <rect
              height="0"
              style="opacity: 1; stroke: white; fill: #00B3A4; stroke-width: 1;"
              width="0"
              x="0"
              y="196"
            />
            <rect
              height="196"
              style="opacity: 1; stroke: white; fill: #00B3A4; stroke-width: 1;"
              width="596"
              x="0"
              y="196"
            />
          </g>
        </g>
        <g
          class="rv-xy-plot__grid-lines"
          transform="translate(2,2)"
        >
          <line
            class="rv-xy-plot__grid-lines__line"
            style="stroke-dasharray: 5 5; stroke-opacity: 0.3;"
            x1="0"
            x2="596"
            y1="176.4"
            y2="176.4"
          />
          <line
            class="rv-xy-plot__grid-lines__line"
            style="stroke-dasharray: 5 5; stroke-opacity: 0.3;"
            x1="0"
            x2="596"
            y1="137.2"
            y2="137.2"
          />
          <line
            class="rv-xy-plot__grid-lines__line"
            style="stroke-dasharray: 5 5; stroke-opacity: 0.3;"
            x1="0"
            x2="596"
            y1="98"
            y2="98"
          />
          <line
            class="rv-xy-plot__grid-lines__line"
            style="stroke-dasharray: 5 5; stroke-opacity: 0.3;"
            x1="0"
            x2="596"
            y1="58.80000000000001"
            y2="58.80000000000001"
          />
          <line
            class="rv-xy-plot__grid-lines__line"
            style="stroke-dasharray: 5 5; stroke-opacity: 0.3;"
            x1="0"
            x2="596"
            y1="19.599999999999994"
            y2="19.599999999999994"
          />
        </g>
        <g
          class="rv-xy-plot__axis rv-xy-plot__axis--horizontal "
          transform="translate(2,198)"
        >
          <line
            class="rv-xy-plot__axis__line"
            x1="0"
            x2="596"
            y1="0"
            y2="0"
          />
          <g
            class="rv-xy-plot__axis__ticks"
            transform="translate(0, 0)"
          >
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(0, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.72em"
                text-anchor="middle"
                transform="translate(0, 8)"
              >
                0.0
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(59.6, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.72em"
                text-anchor="middle"
                transform="translate(0, 8)"
              >
                0.1
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(119.2, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.72em"
                text-anchor="middle"
                transform="translate(0, 8)"
              >
                0.2
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(178.79999999999998, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.72em"
                text-anchor="middle"
                transform="translate(0, 8)"
              >
                0.3
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(238.4, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.72em"
                text-anchor="middle"
                transform="translate(0, 8)"
              >
                0.4
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(298, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.72em"
                text-anchor="middle"
                transform="translate(0, 8)"
              >
                0.5
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(357.59999999999997, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.72em"
                text-anchor="middle"
                transform="translate(0, 8)"
              >
                0.6
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(417.2, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.72em"
                text-anchor="middle"
                transform="translate(0, 8)"
              >
                0.7
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(476.8, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.72em"
                text-anchor="middle"
                transform="translate(0, 8)"
              >
                0.8
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(536.4, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.72em"
                text-anchor="middle"
                transform="translate(0, 8)"
              >
                0.9
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(596, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.72em"
                text-anchor="middle"
                transform="translate(0, 8)"
              >
                1.0
              </text>
            </g>
          </g>
        </g>
        <g
          class="rv-xy-plot__axis rv-xy-plot__axis--vertical "
          transform="translate(0,2)"
        >
          <line
            class="rv-xy-plot__axis__line"
            x1="2"
            x2="2"
            y1="0"
            y2="196"
          />
          <g
            class="rv-xy-plot__axis__ticks"
            transform="translate(2, 0)"
          >
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(0, 176.4)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.32em"
                text-anchor="end"
                transform="translate(-8, 0)"
              >
                6
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(0, 137.2)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.32em"
                text-anchor="end"
                transform="translate(-8, 0)"
              >
                8
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(0, 98)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.32em"
                text-anchor="end"
                transform="translate(-8, 0)"
              >
                10
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(0, 58.80000000000001)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.32em"
                text-anchor="end"
                transform="translate(-8, 0)"
              >
                12
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(0, 19.599999999999994)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.32em"
                text-anchor="end"
                transform="translate(-8, 0)"
              >
                14
              </text>
            </g>
          </g>
        </g>
      </svg>
    </div>
  </div>
</div>
`;

exports[`EuiHorizontalRectSeries renders stacked bar chart 1`] = `
<div
  style="width:100%;height:100%"
>
  <div>
    <div
      class="rv-xy-plot "
      style="width:600px;height:200px"
    >
      <svg
        class="rv-xy-plot__inner"
        height="200"
        width="600"
      >
        <g>
          <g
            class="rv-xy-plot__series rv-xy-plot__series--rect "
            transform="translate(2,2)"
          >
            <rect
              height="56"
              style="opacity:1;stroke:white;fill:#ff0000;stroke-width:1;rx:2px;ry:2px"
              width="0"
              x="149"
              y="196"
            />
            <rect
              height="0"
              style="opacity:1;stroke:white;fill:#ff0000;stroke-width:1;rx:2px;ry:2px"
              width="298"
              x="149"
              y="196"
            />
          </g>
        </g>
        <g>
          <g
            class="rv-xy-plot__series rv-xy-plot__series--rect "
            transform="translate(2,2)"
          >
            <rect
              height="56"
              style="opacity:1;stroke:white;fill:#00ff00;stroke-width:1;rx:2px;ry:2px"
              width="0"
              x="149"
              y="140"
            />
            <rect
              height="196"
              style="opacity:1;stroke:white;fill:#00ff00;stroke-width:1;rx:2px;ry:2px"
              width="298"
              x="149"
              y="196"
            />
          </g>
        </g>
        <g
          class="rv-xy-plot__grid-lines"
          transform="translate(2,2)"
        >
          <line
            class="rv-xy-plot__grid-lines__line"
            style="stroke-dasharray:5 5;stroke-opacity:0.3"
            x1="0"
            x2="596"
            y1="196"
            y2="196"
          />
          <line
            class="rv-xy-plot__grid-lines__line"
            style="stroke-dasharray:5 5;stroke-opacity:0.3"
            x1="0"
            x2="596"
            y1="168"
            y2="168"
          />
          <line
            class="rv-xy-plot__grid-lines__line"
            style="stroke-dasharray:5 5;stroke-opacity:0.3"
            x1="0"
            x2="596"
            y1="140"
            y2="140"
          />
          <line
            class="rv-xy-plot__grid-lines__line"
            style="stroke-dasharray:5 5;stroke-opacity:0.3"
            x1="0"
            x2="596"
            y1="112"
            y2="112"
          />
          <line
            class="rv-xy-plot__grid-lines__line"
            style="stroke-dasharray:5 5;stroke-opacity:0.3"
            x1="0"
            x2="596"
            y1="84"
            y2="84"
          />
          <line
            class="rv-xy-plot__grid-lines__line"
            style="stroke-dasharray:5 5;stroke-opacity:0.3"
            x1="0"
            x2="596"
            y1="56"
            y2="56"
          />
          <line
            class="rv-xy-plot__grid-lines__line"
            style="stroke-dasharray:5 5;stroke-opacity:0.3"
            x1="0"
            x2="596"
            y1="28"
            y2="28"
          />
          <line
            class="rv-xy-plot__grid-lines__line"
            style="stroke-dasharray:5 5;stroke-opacity:0.3"
            x1="0"
            x2="596"
            y1="0"
            y2="0"
          />
        </g>
        <g
          class="rv-xy-plot__axis rv-xy-plot__axis--horizontal "
          transform="translate(2,198)"
        >
          <line
            class="rv-xy-plot__axis__line"
            x1="0"
            x2="596"
            y1="0"
            y2="0"
          />
          <g
            class="rv-xy-plot__axis__ticks"
            transform="translate(0, 0)"
          >
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(149, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.72em"
                text-anchor="middle"
                transform="translate(0, 8)"
              >
                0
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(447, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.72em"
                text-anchor="middle"
                transform="translate(0, 8)"
              >
                1
              </text>
            </g>
          </g>
        </g>
        <g
          class="rv-xy-plot__axis rv-xy-plot__axis--vertical "
          transform="translate(0,2)"
        >
          <line
            class="rv-xy-plot__axis__line"
            x1="2"
            x2="2"
            y1="0"
            y2="196"
          />
          <g
            class="rv-xy-plot__axis__ticks"
            transform="translate(2, 0)"
          >
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(0, 196)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.32em"
                text-anchor="end"
                transform="translate(-8, 0)"
              >
                3
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(0, 168)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.32em"
                text-anchor="end"
                transform="translate(-8, 0)"
              >
                4
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(0, 140)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.32em"
                text-anchor="end"
                transform="translate(-8, 0)"
              >
                5
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(0, 112)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.32em"
                text-anchor="end"
                transform="translate(-8, 0)"
              >
                6
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(0, 84)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.32em"
                text-anchor="end"
                transform="translate(-8, 0)"
              >
                7
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(0, 56)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.32em"
                text-anchor="end"
                transform="translate(-8, 0)"
              >
                8
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(0, 28)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.32em"
                text-anchor="end"
                transform="translate(-8, 0)"
              >
                9
              </text>
            </g>
            <g
              class="rv-xy-plot__axis__tick"
              transform="translate(0, 0)"
            >
              <line
                class="rv-xy-plot__axis__tick__line"
                x1="0"
                x2="0"
                y1="0"
                y2="0"
              />
              <text
                class="rv-xy-plot__axis__tick__text"
                dy="0.32em"
                text-anchor="end"
                transform="translate(-8, 0)"
              >
                10
              </text>
            </g>
          </g>
        </g>
      </svg>
    </div>
  </div>
</div>
`;
